<resources>
    <string name="app_name">Darian Calendar</string>
    <string name="sol_of_week">Sol of week</string>
    <string name="martian_date">Martian date</string>
    <string name="martian_time">Martian time</string>
    <string name="day_of_week">Day of week</string>
    <string name="earth_date">Earth date</string>
    <string name="earth_time">Earth time</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_custom_date">Custom Date</string>
    <string name="choose_date">Choose Date</string>
    <string name="action_what">What is this?</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_text"><b>Copyright &#169; 2015 Marko Krause</b>\n\n
    This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n
        This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n
        You should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses/.\n\n

        <b>Additional copyrights:</b>\n
        Darian calendar algorithm: translated from https://github.com/cworreschk/darian_calendar\n
        Background images: NASA Public Domain https://commons.wikimedia.org/wiki/File:Mars_and_Syrtis_Major_-_GPN-2000-000923.jpg#/media/File:Mars_and_Syrtis_Major_-_GPN-2000-000923.jpg\n
        App icon: Public Domain https://en.wikipedia.org/wiki/File:Mars_dan_gerhards_01.svg
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_pref_calendar_type">Calendar type</string>
    <string name="summary_pref_calendar_type">Naming scheme for calendar</string>
    <string name="default_pref_calendar_type">martiana</string>
    <string-array name="entries_pref_calendar_type">
        <item>Martiana</item>
        <item>Hensel</item>
        <item>Defrost</item>
        <item>Areosynchronous</item>
    </string-array>
    <string-array name="entryvalues_pref_calendar_type">
        <item>martiana</item>
        <item>hensel</item>
        <item>defrost</item>
        <item>areosynchronous</item>
    </string-array>
</resources>
