<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Darian">
    <item android:id="@+id/action_choose_date"
        android:title="@string/choose_date"
        android:icon="@android:drawable/ic_menu_month"
        app:showAsAction="ifRoom"/>    <item android:id="@+id/action_what" android:title="@string/action_what"
    android:orderInCategory="100" app:showAsAction="ifRoom"
    android:icon="@android:drawable/ic_menu_help"/>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
