<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/mars"
        android:background="#FF000000"
        />
    <LinearLayout

        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--android:background="@drawable/mars"-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/martian_border"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calendar_type"
                android:gravity="center"
                android:textSize="5pt"
                android:text="Calendar type"/>

            <TextView
                android:id="@+id/sol_of_week"
                android:text="@string/sol_of_week"
                android:gravity="center"
                android:textSize="20pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/martian_date"
                android:text="@string/martian_date"
                android:gravity="center"
                android:textSize="15pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/martian_time"
                android:text="@string/martian_time"
                android:gravity="center"
                android:textSize="25pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/earth_border"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/day_of_week"
                android:text="@string/day_of_week"
                android:gravity="center"
                android:textSize="20pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/earth_date"
                android:text="@string/earth_date"
                android:gravity="center"
                android:textSize="15pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/earth_time"
                android:text="@string/earth_time"
                android:gravity="center"
                android:textSize="25pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>